--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server api for the bucket-list application",
   "main": "index.js",
   "scripts": {
-    "start":"node ./index",
+    "start": "node ./index",
     "server": "node ./index",
     "test": "nyc --reporter=html --port=2222 --reporter=text mocha"
   },
@@ -23,9 +23,11 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "mongoose": "^5.11.19",
     "morgan": "^1.10.0",
     "nyc": "^15.1.0",
     "q": "^1.5.1",
+    "rxjs": "^6.6.6",
     "util": "^0.12.3",
     "x-utils-es": "^1.6.1"
   },
