--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,6 +11,6 @@
     "lib": ["es2017", "dom"],
   },
 
-  "include": ["libs", "config.js"],
+  "include": ["libs", "config.js","mongo.populate.js"],
   "exclude": ["node_modules", "tmp"]
 }
