integrated db/controllers with app/controllers, so far: createBucket,updateBucketStatus

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,6 @@
 {
   "parserOptions": {
     "ecmaVersion": 2018,
-    "ecmaFeatures": {
-      "jsx": true
-    },
     "sourceType": "module"
   },
 
@@ -13,7 +10,6 @@
   },
 
   "plugins": [
-    "import",
     "node",
     "promise",
     "standard"
@@ -185,11 +181,11 @@
     "yield-star-spacing": ["error", "both"],
     "yoda": ["error", "never"],
 
-    "import/export": "error",
-    "import/first": "error",
-    "import/no-duplicates": "error",
-    "import/no-named-default": "error",
-    "import/no-webpack-loader-syntax": "error",
+    "import/export": 0,
+    "import/first": 0,
+    "import/no-duplicates": 0,
+    "import/no-named-default": 0,
+    "import/no-webpack-loader-syntax": 0,
 
     "node/no-deprecated-api": "error",
     "node/process-exit-as-throw": "error",
