--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "start": "node ./index",
     "server": "node ./index",
-    "populate":"node ./mongo.populate.js",
-    "test": "nyc --reporter=html --port=2222 --reporter=text mocha"
+    "populate": "node ./mongo.populate.js",
+    "test": "nyc --reporter=html --port=2222 --reporter=text mocha",
+    "lint:install": "npm i babel-eslint eslint eslint-plugin-node eslint-plugin-standard eslint-plugin-promise@latest --save-dev",
+    "lint": "./node_modules/.bin/eslint  --ext .js libs",
+    "lint:fix": "./node_modules/.bin/eslint --fix --ext .js libs"
   },
   "author": "eaglex.net",
   "license": "CC BY-NC-ND",
@@ -35,7 +38,10 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "bash-color": "0.0.4",
     "eslint": "^7.21.0",
-    "bash-color": "0.0.4"
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^5.0.0"
   }
 }
