--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "mongoose-validate": "0.0.5",
     "morgan": "^1.10.0",
     "q": "^1.5.1",
+    "request": "^2.88.2",
     "rxjs": "^6.6.6",
+    "tape": "^5.2.2",
     "x-utils-es": "^1.6.1"
   },
   "devDependencies": {
