--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Server api for the bucket-list application",
   "main": "index.js",
+  "license": "CC BY-NC-ND 2.0",
   "scripts": {
     "start": "node ./index",
     "server": "node ./index",
@@ -13,7 +14,6 @@
     "test": "node test.js"
   },
   "author": "eaglex.net",
-  "license": "CC BY-NC-ND",
   "engineStrict": true,
   "engines": {
     "node": "~12.0.0",
