--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "author": "eaglex.net",
   "engineStrict": true,
   "engines": {
-    "node": "~12.0.0",
-    "npm": "~6.9.0"
+    "node": "~14"
   },
   "dependencies": {
     "base-64": "^1.0.0",
